# Computer-Architecture-II

CacheSimulator/: CMakeLists.txt
CacheSimulator/include/: DirectoryController.c  DirectoryController.h  L1Controller.c  L1Controller.h  L2Controller.c  L2Controller.h  MemController.c  MemController.h  SnoopingController.c  SnoopingController.h  block.h  bus.h  cache.h  instruction.c  instruction.h  memory.h  message.h  randomPoisson.c  randomPoisson.h  randomPoisson.h.gch
CacheSimulator/src/: a.out  main.c  test  test.c
Taller I/: Problem_1.c  Problem_2.c  README.txt  multithreading  problem
Taller II/: pi.c  pi_loop.c  saxpy.c
Taller II/Codigo/: README.txt  euler.c  pi.c  pi_loop.c  test.c
Taller III/: README.txt  sseMatrix.c  sseVectors.c
Taller IV/: README  Results.txt
Taller IV/SAXPY/jni/: saxpy.c  test
Taller IV/SAXPY/libs/armeabi-v7a/: saxpy
Taller IV/SAXPY_par/jni/: saxpy_par.c
Taller IV/SAXPY_par/libs/armeabi-v7a/: saxpy_par
Taller IV/dotproduct/jni/: Android.mk  dot.c
Taller IV/dotproduct/libs/armeabi-v7a/: dot
Taller IV/euler/jni/: Android.mk  Application.mk  euler.c
Taller IV/euler/libs/armeabi-v7a/: euler
Taller V/: README
Taller V/Multiplication/: mxmul.c  mxmul.cl
Taller V/SAXPY/: saxpy.c  saxpy.cl
Taller VI/: README  hello_mpi.c  matrix_mul.c  matrix_mul_serial.c  sum_mpi.c
